--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "postcss-import": "^14.0.1",
         "tailwindcss": "^2.1.2",
         "vue": "^3.0.5",
-        "vue-loader": "^16.1.2"
+        "vue-loader": "^16.1.2",
+        "bootstrap": "^4.0.0"
     }
 }
